--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@aedart/symbi-root",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "lerna": "^3.14.1"
   }
