--- a/package.json
+++ b/package.json
@@ -4,7 +4,24 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "test": "./node_modules/karma/bin/karma start --browsers Chrome,Firefox",
+    "test-min": "./node_modules/karma/bin/karma start --browsers ChromeHeadless"
+  },
   "devDependencies": {
-    "lerna": "^3.14.1"
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "jasmine": "^3.4.0",
+    "karma": "^4.1.0",
+    "karma-babel-preprocessor": "^8.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^3.0.5",
+    "lerna": "^3.14.1",
+    "puppeteer": "^1.17.0",
+    "webpack": "^4.33.0"
   }
 }
