Add lerna version as a script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   ],
   "scripts": {
     "test": "./node_modules/karma/bin/karma start --browsers Chrome,Firefox",
-    "test-min": "./node_modules/karma/bin/karma start --browsers ChromeHeadless"
+    "test-min": "./node_modules/karma/bin/karma start --browsers ChromeHeadless",
+    "version": "./node_modules/lerna/cli.js version"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
