--- a/packages/mixins/package.json
+++ b/packages/mixins/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aedart/mixins",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Mixin Utility",
   "keywords": [
     "Mixin"
@@ -16,9 +16,7 @@
     "type": "git",
     "url": "git+https://github.com/aedart/symbi.git"
   },
-  "scripts": {
-
-  },
+  "scripts": {},
   "bugs": {
     "url": "https://github.com/aedart/symbi/issues"
   }
