--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "./node_modules/karma/bin/karma start --browsers Chrome,Firefox",
     "test-min": "./node_modules/karma/bin/karma start --browsers ChromeHeadless",
-    "version": "./node_modules/lerna/cli.js version --conventional-commits --no-push"
+    "version": "./node_modules/lerna/cli.js version --conventional-commits --no-push",
+    "bootstrap": "./node_modules/lerna/cli.js bootstrap",
+    "publish": "./node_modules/lerna/cli.js publish"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
