--- a/packages/mixins/package.json
+++ b/packages/mixins/package.json
@@ -10,7 +10,8 @@
   "license": "BSD-3-Clause",
   "main": "index.js",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
