--- a/packages/mixins/package.json
+++ b/packages/mixins/package.json
@@ -10,8 +10,7 @@
   "license": "BSD-3-Clause",
   "main": "index.js",
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "access": "public"
   },
   "repository": {
     "type": "git",
