--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "karma-webpack": "^3.0.5",
     "lerna": "^3.14.1",
     "puppeteer": "^1.17.0",
-    "webpack": "^4.33.0"
-  }
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3"
+  },
+  "browserslist": [
+    "> 0.2%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
