--- a/packages/meta/package.json
+++ b/packages/meta/package.json
@@ -20,5 +20,8 @@
   "scripts": {},
   "bugs": {
     "url": "https://github.com/aedart/symbi/issues"
+  },
+  "peerDependencies": {
+    "@aedart/mixins": "^0.2.2"
   }
 }
