--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,10 @@
     "packages/*"
   ],
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "command": {
+    "publish": {
+      "message": "chore(release): publish %s"
+    }
+  }
 }
