--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "./node_modules/karma/bin/karma start --browsers Chrome,Firefox",
     "test-min": "./node_modules/karma/bin/karma start --browsers ChromeHeadless",
-    "version": "./node_modules/lerna/cli.js version --conventional-commits --no-push --yes",
+    "version": "./node_modules/lerna/cli.js version --no-push --yes",
     "bootstrap": "./node_modules/lerna/cli.js bootstrap",
     "publish": "./node_modules/lerna/cli.js publish from-git",
     "create-pgk": "./node_modules/lerna/cli.js create"
