chore(root): add scripts for dealing with docs

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "version": "./node_modules/lerna/cli.js version --no-push --yes",
     "bootstrap": "./node_modules/lerna/cli.js bootstrap",
     "publish": "./node_modules/lerna/cli.js publish from-git",
-    "create-pgk": "./node_modules/lerna/cli.js create"
+    "create-pgk": "./node_modules/lerna/cli.js create",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
