--- a/package.json
+++ b/package.json
@@ -1,41 +1,22 @@
 {
-  "name": "@aedart/symbi-mono-repo",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "name": "symbi",
+  "version": "0.5.0",
+  "description": "Symbi is a mono repository; a collection of various JavaScript packages.",
+  "main": "index.js",
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start --browsers Chrome,Firefox",
-    "test-min": "./node_modules/karma/bin/karma start --browsers ChromeHeadless",
-    "version": "./node_modules/lerna/cli.js version --no-push --yes",
-    "bootstrap": "./node_modules/lerna/cli.js bootstrap",
-    "publish": "./node_modules/lerna/cli.js publish from-git",
-    "create-pgk": "./node_modules/lerna/cli.js create",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
-    "docs:publish": "./deploy-docs.sh"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "babel-loader": "^8.0.6",
-    "faker": "^4.1.0",
-    "jasmine": "^3.4.0",
-    "karma": "^4.1.0",
-    "karma-babel-preprocessor": "^8.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^2.0.1",
-    "karma-spec-reporter": "^0.0.32",
-    "karma-webpack": "^4.0.2",
-    "lerna": "^3.14.1",
-    "puppeteer": "^1.17.0",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.3"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aedart/symbi.git"
   },
-  "browserslist": [
-    "> 0.2%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "keywords": [
+    "Symbi"
+  ],
+  "author": "Alin Eugen Deac",
+  "license": "BSD-3-Clause",
+  "bugs": {
+    "url": "https://github.com/aedart/symbi/issues"
+  },
+  "homepage": "https://github.com/aedart/symbi#readme"
 }
