--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "keywords": [
     "Symbi"
   ],
-  "author": "Alin Eugen Deac",
+  "author": "Alin Eugen Deac <aedart@gmail.com>",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/aedart/symbi/issues"
   },
-  "homepage": "https://github.com/aedart/symbi#readme",
+  "homepage": "https://github.com/aedart/symbi",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -24,9 +24,18 @@
     "bootstrap": "lerna bootstrap",
     "clean": "lerna clean",
     "compile": "lerna run compile",
-    "test": "jest"
+    "watch": "lerna run watch",
+    "lint": "eslint packages/**",
+    "lint-fix": "eslint packages/** --fix",
+    "test": "npm run lint && jest"
   },
   "devDependencies": {
+    "eslint": "^7.24.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-vue": "^7.9.0",
     "jest": "^26.6.3",
     "lerna": "^4.0.0"
   }
