--- a/package.json
+++ b/package.json
@@ -23,20 +23,29 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "clean": "lerna clean",
+    "build": "lerna run compile",
     "compile": "lerna run compile",
     "watch": "lerna run watch",
     "lint": "eslint packages/**",
     "lint-fix": "eslint packages/** --fix",
-    "test": "npm run lint && jest"
+    "test": "npm run compile && jest"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-eslint": "^8.0.1",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^2.4.2",
     "eslint": "^7.24.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.9.0",
+    "faker": "^5.5.3",
     "jest": "^26.6.3",
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "rollup": "^2.45.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
   }
 }
