--- a/package.json
+++ b/package.json
@@ -28,16 +28,21 @@
     "watch": "lerna run watch",
     "lint": "eslint packages/**",
     "lint-fix": "eslint packages/** --fix",
-    "test": "npm run compile && jest"
+    "test": "npm run compile && karma start tests/configs/prod.conf.js",
+    "test-dev": "npm run compile && karma start tests/configs/dev.conf.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.0",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.14.1",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.24.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -45,9 +50,18 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.9.0",
     "faker": "^5.5.3",
+    "jasmine-core": "^3.7.1",
     "jest": "^26.6.3",
+    "karma": "^6.3.2",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.0",
+    "karma-jasmine": "^4.0.1",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^5.0.0",
     "lerna": "^4.0.0",
+    "puppeteer": "^9.1.1",
     "rollup": "^2.45.2",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "webpack": "^5.36.2"
   }
 }
