--- a/packages/contracts/.babelrc
+++ b/packages/contracts/.babelrc
@@ -4,7 +4,7 @@
     ["module-resolver", {
       "root": ["./src"],
       "alias": {
-        "@mixins": "./src"
+        "@contracts": "./src"
       }
     }]
   ]
