--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lerna": "^4.0.0",
     "puppeteer": "^9.1.1",
     "rollup": "^2.45.2",
+    "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "webpack": "^5.36.2"
   }
