Change contracts package export, split into minor files
To ensure that only the smallest parts are imported by other packages, each "sub-module" is exported individually, allowing developers to choose what "sub module" to import.

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -20,6 +20,14 @@
   "files": [
     "dist"
   ],
+  "type": "module",
+  "exports": {
+    ".": "./dist/contracts.cjs.js",
+    "./dist/*": {
+      "import": "./dist/*.esm.js",
+      "require": "./dist/*.cjs.js"
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
