Change export settings
It appears that rollup likes this setting much more, rather than explicit "import" and "export". Not sure how other bundlers are going to behave

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -23,10 +23,7 @@
   "type": "module",
   "exports": {
     ".": "./dist/contracts.cjs.js",
-    "./dist/*": {
-      "import": "./dist/*.esm.js",
-      "require": "./dist/*.cjs.js"
-    }
+    "./dist/*": "./dist/*.js"
   },
   "publishConfig": {
     "access": "public"
